2009-06-11  Darren Kenny  <darren.kenny@sun.com>

	* capplet/main.c, capplet/nwam_conn_conf_ip_panel.c,
	  capplet/nwam_conn_stat_panel.c, capplet/nwam_env_pref_dialog.c,
	  capplet/nwam_env_svc.c, capplet/nwam_location_dialog.c,
	  capplet/nwam_net_conf_panel.c, capplet/nwam_pref_dialog.c,
	  capplet/nwam_proxy_password_dialog.c,
	  capplet/nwam_vpn_pref_dialog.c, capplet/nwam_wireless_chooser.c,
	  capplet/nwam_wireless_dialog.c, common/nwamui_cond.c,
	  common/nwamui_daemon.c, common/nwamui_enm.c, common/nwamui_env.c,
	  common/nwamui_ip.c, common/nwamui_ncp.c, common/nwamui_ncu.c,
	  common/nwamui_prof.c, common/nwamui_svc.c, common/nwamui_wifi_net.c,
	  daemon/main.c, daemon/notify.c, daemon/nwam-ncu-item.c,
	  daemon/nwam-wifi-item.c, daemon/status_icon.c:
	  Remove trailing \n in all g_debug calls.

2009-06-11  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c: 
	  Handle PRIORITY_GROUP event (doesn't currently do anything except
	  log it).  Fix a bug in
	  nwamui_daemon_update_status_from_object_state_event() where it was
	  causing the wrong state to be generated when an event occurred on an
	  NCU that isn't in the current priority group.
	* common/nwamui_ncp.c: 
	  Update nwamui_ncp_get_current_prio_group() to use new function in
	  libnwam to get active priority level.
	* daemon/status_icon.c: 
	  Should be ref-ing a self object passed to the g_timeout_add when
	  g_object_unref is passed as function to free it (was causing a
	  crash).

2009-06-10  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c: 
	  If an NCU is not modifiable, then don't try to apply settings, also,
	  if it's not modifiable, make widgits insensitive.
	* common/libnwamui.c: 
	  Fix issue where connected/connecting state for wireless wasn't being
	  handled correctly.
	* common/nwamui_daemon.h, common/nwamui_daemon.c: 
	  Add some functions nwamui_daemon_get_env_by_name() and 
	  nwamui_daemon_get_enm_by_name(). 